--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,41 +6,27 @@
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width">
 
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
-
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
+	    <link rel="stylesheet" href="css/styles.css">
+	    <link rel="stylesheet" href="css/pygment_trac.css">
 
     </head>
     <body>
-
-        <div class="container">
-          <div class="site">
-            <div class="header">
-              <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-              <a class="extra" href="/">home</a>
-            </div>
-
+		<div class="wrapper">
+            <header>
+              <h1>{{ site.name }}</h1>
+            </header>
+			<section>
                 {{ content }}
-
-            <div class="footer">
+			</section>
+            <footer>
               <div class="contact">
-                <p>
-                  Your Name<br />
-                  What You Are<br />
-                  your@email.com
-                </p>
+                &copy; 2013 Jared Seehafer
               </div>
-              <div class="contact">
-                <p>
-                  <a href="http://github.com/yourusername/">github.com/yourusername</a><br />
-                  <a href="http://twitter.com/yourusername/">twitter.com/yourusername</a><br />
-                </p>
-              </div>
-            </div>
-          </div>
-        </div> <!-- /container -->
-
+			  <div class="license">
+				This work is licensed under a <br /><a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.en_US">Creative Commons Attribution-NonCommercial-NoDerivs 3.0 Unported License</a>.
+			  </div>
+            </footer>
+        </div>
+		<script src="js/scale.fix.js"></script>
     </body>
 </html>
